<resources>
    <string name="app_name">Color Chooser</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_colorname">color name</string>
</resources>
